--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,29 +135,38 @@ MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
 LastLevel=/Game/Maps/Map1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Map1
-MRUItem1=/Game/StarterContent/Maps/Minimal_Default
-MRUItem2=/Game/StarterContent/Maps/StarterMap
-MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem0=/Game/NewMaterialInstanceConstant
+MRUItem1=/Game/NewMaterial
+MRUItem2=/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat
+MRUItem3=/Game/Maps/Map1
+MRUItem4=/Game/StarterContent/Maps/Minimal_Default
+MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone;
+RecentlyPlaced=/Game/NewMaterialInstanceConstant.NewMaterialInstanceConstant;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Hex_Tile.M_Tech_Hex_Tile;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Smooth.M_CobbleStone_Smooth;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Grime.M_Concrete_Grime;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
+RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Pebble.M_CobbleStone_Pebble;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/ArchVisCharacter.ArchVisCharacter;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat.T_Brick_Clay_Old_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Stone_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_D.T_Brick_Clay_Old_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Beveled_M.T_Brick_Clay_Beveled_M;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Beveled_D.T_Brick_Clay_Beveled_D;
-RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 
 [DetailCategories]
 SkyLight.TransformCommon=True
@@ -282,6 +291,28 @@ ArchVisCharacter.Clothing=True
 ArchVisCharacter.Mesh=True
 ArchVisCharacter.Animation=True
 ArchVisCharacter.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.Actor=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -331,6 +362,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=../../../../../Unreal Projects/DungeonCrawl/Content/Maps
@@ -1223,4 +1256,78 @@ MovieSceneCapture.TimeStamp=2022.08.28-19.47.57
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2022.08.28-19.47.55
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
+MaterialInstanceConstant=
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat.T_Brick_Clay_Old_Mat=1
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
