--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,18 +135,22 @@ MRUItem3=/Game/StarterContent/Maps/Advanced_Lighting
 LastLevel=/Game/Maps/Map1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/NewMaterialInstanceConstant
-MRUItem1=/Game/NewMaterial
-MRUItem2=/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat
-MRUItem3=/Game/Maps/Map1
-MRUItem4=/Game/StarterContent/Maps/Minimal_Default
-MRUItem5=/Game/StarterContent/Maps/StarterMap
-MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem0=/Game/StarterContent/Materials/M_Concrete_Panels
+MRUItem1=/Game/StarterContent/Materials/M_Concrete_Tiles
+MRUItem2=/Game/StarterContent/Materials/M_Brick_Cut_Stone
+MRUItem3=/Game/NewMaterialInstanceConstant
+MRUItem4=/Game/NewMaterial
+MRUItem5=/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat
+MRUItem6=/Game/Maps/Map1
+MRUItem7=/Game/StarterContent/Maps/Minimal_Default
+MRUItem8=/Game/StarterContent/Maps/StarterMap
+MRUItem9=/Game/StarterContent/Maps/Advanced_Lighting
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone;
 RecentlyPlaced=/Game/NewMaterialInstanceConstant.NewMaterialInstanceConstant;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Hewn_Stone.M_Brick_Hewn_Stone;
@@ -166,7 +170,6 @@ RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_
 RecentlyPlaced=/Script/ArchVisCharacter.ArchVisCharacter;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_Mat.T_Brick_Clay_Old_Mat;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Stone_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_D.T_Brick_Clay_Old_D;
 
 [DetailCategories]
 SkyLight.TransformCommon=True
@@ -313,6 +316,27 @@ Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
 Actor.Actor=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -336,7 +360,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InstalledPlugins=XRVisualization
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=-341.000 Y=38.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -352,7 +376,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1258,6 +1282,7 @@ HierarchicalLODUtilities.TimeStamp=2022.08.28-19.47.55
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
@@ -1267,6 +1292,9 @@ MaterialInstanceConstant=
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Textures/T_Brick_Clay_Old_Mat.T_Brick_Clay_Old_Mat=1
+/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone=1
+/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles=1
+/Game/StarterContent/Materials/M_Concrete_Panels.M_Concrete_Panels=1
 
 [MaterialEditor]
 PrimType=1
