--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -141,7 +141,7 @@ MRUItem6=/Game/StarterContent/Maps/Advanced_Lighting
 LastLevel=/Game/Maps/Map1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Maps/Map1.Map1:PersistentLevel.Map1
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/PlayerBP.PlayerBP
 OpenAssetsAtExit=/Game/Blueprint/OpenDoor.OpenDoor
@@ -1677,7 +1677,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh=
 StreamableRenderAsset="\"Object.Adjustments.ChromaKeyColor\" "
-Object=
+Object="\"Object.Tip\" "
 StaticMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
@@ -1741,8 +1741,8 @@ Get_DeathCount_Text_0="\"Struct.DeathC\" "
 UIDeathScore_C=
 Call Restart Player=
 Call Restart Player_11=
-NewGameInstance_C=
-GameInstance=
+NewGameInstance_C="\"Object.Tip\" "
+GameInstance="\"Object.Tip\" "
 Texture2D="\"Object.Adjustments.ChromaKeyColor\" "
 Texture="\"Object.Adjustments.ChromaKeyColor\" "
 PointLight8_Blueprint_C=
@@ -1765,7 +1765,7 @@ LargeAI_C="\"Object.Character.Mesh.Object.Rendering.CustomPrimitiveData\" \"Obje
 InstalledPlugins=XRVisualization
 
 [RootWindow]
-ScreenPosition=X=302.000 Y=154.000
+ScreenPosition=X=-52.000 Y=92.000
 WindowSize=X=1906.000 Y=1018.000
 InitiallyMaximized=False
 
@@ -1781,7 +1781,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/CityofBrass_Enemies/Meshes/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
